--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
         "build": "vuepress build docs"
     },
     "devDependencies": {
-        "vuepress": "^1.2.0",
-        "vuepress-theme-reco": "^1.1.1"
+        "vuepress": "~1.5.0",
+        "vuepress-theme-reco": "~1.5.7",
+        "vue-router": "3.4.5"
     },
     "description": ""
 }
