--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
         "build": "vuepress build docs"
     },
     "devDependencies": {
+        "vue-router": "3.4.5",
         "vuepress": "~1.5.0",
-        "vuepress-theme-reco": "~1.5.7",
-        "vue-router": "3.4.5"
+        "vuepress-plugin-mathjax": "^1.2.8",
+        "vuepress-theme-reco": "~1.5.7"
     },
     "description": ""
 }
