--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "vuepress-plugin-mathjax": "^1.2.8",
         "vuepress-theme-reco": "~1.5.7"
     },
-    "description": ""
+    "description": "",
+    "dependencies": {
+        "@vuepress-reco/vuepress-plugin-rss": "^1.0.2"
+    }
 }
